Editor: Prevent TinyMCE menu scrollbar overflow

--- a/client/components/tinymce/style.scss
+++ b/client/components/tinymce/style.scss
@@ -352,7 +352,6 @@
 
 .mce-menu .mce-container-body {
 	min-width: 160px;
-	margin-bottom: -1px;
 }
 
 .mce-menu-item {
